tests/snapshots/render_snapshots__snapshot_log_pick_view_reword_commit.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&model, 100, 24)"
---
"┌Press Enter on a commit to reword its message, or Esc/q to cancel──────────────────────/repo/magi/┐"
"│* [hash] main Add second file - Test 2 days                                                      │"
"│* [hash] Add first file - Test 2 days                                                            │"
"│* [hash] Initial commit - Test User 2 days                                                       │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└ NORMAL ──────────────────────────────────────────────────────────────────────────────────────────┘"
