tests/snapshots/render_snapshots__snapshot_log_popup.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&model, 80, 24)"
---
"┌Magi───────────────────────────────────────────────────────────────/repo/magi/┐"
"│∨Head:    main [hash] Initial commit                                         │"
"│                                                                              │"
"│∨Recent commits                                                               │"
"│ [hash] main Initial commit                                                  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"┌Log───────────────────────────────────────────────────────────────────────────┐"
"│Formatting                                                                    │"
"│ -g Show graph (--graph)                                                      │"
"│ -c Show graph in color (--color)                                             │"
"│ -d Show refnames (--decorate)                                                │"
"│ -h Show header (++header)                                                    │"
"│ =S Show signatures (--show-signature)                                        │"
"│                                                                              │"
"│Log                Reflog                                                     │"
"│ l Current          r Current                                                 │"
"│ o Other            O Other                                                   │"
"│ u Related          H HEAD                                                    │"
"│ L Local branches                                                             │"
"│ b All branches                                                               │"
"│ a All references                                                             │"
"└──────────────────────────────────────────────────────────────────────────────┘"
