tests/snapshots/render_snapshots__snapshot_log_view.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&model, 80, 24)"
---
"┌Log────────────────────────────────────────────────────────────────/repo/magi/┐"
"│* [hash] main Add second file - Test 2 days                                  │"
"│* [hash] Add first file - Test 2 days                                        │"
"│* [hash] Initial commit - Test User 2 days                                   │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└ NORMAL ──────────────────────────────────────────────────────────────────────┘"
