tests/snapshots/render_snapshots__snapshot_log_view_with_header.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&model, 80, 24)"
---
"┌Log────────────────────────────────────────────────────────────────/repo/magi/┐"
"│* [hash] main Add second file - Test 2 days                                  │"
"│|                                                                             │"
"│| Author:    Test <test@test.com>                                             │"
"│| Committer: Test <test@test.com>                                             │"
"│|                                                                             │"
"│* [hash] Add first file - Test 2 days                                        │"
"│|                                                                             │"
"│| Author:    Test <test@test.com>                                             │"
"│| Committer: Test <test@test.com>                                             │"
"│|                                                                             │"
"│* [hash] Initial commit - Test User 2 days                                   │"
"│                                                                              │"
"│  Author:    Test User <test@example.com>                                     │"
"│  Committer: Test User <test@example.com>                                     │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└ NORMAL ──────────────────────────────────────────────────────────────────────┘"
