tests/snapshots/render_snapshots__snapshot_merge_conflict_error_popup.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&model, 80, 24)"
---
"┌Magi───────────────────────────────────────────────────────────────/repo/magi/┐"
"│∨Head:    main [hash] Initial commit                                         │"
"│                                                                              │"
"│∨Recent commits                                                               │"
"│ [hash] main Initial commit                                                  │"
"│                                                                              │"
"│                                                                              │"
"│ ┌Error────────────────────────────────────────────────────────────────────┐  │"
"│ │Merge of 'feature' stopped due to conflicts:                             │  │"
"│ │                                                                         │  │"
"│ │  base.txt                                                               │  │"
"│ │                                                                         │  │"
"│ │Resolve the conflicts, then continue or abort from the merge popup (m).  │  │"
"│ │                                                                         │  │"
"│ │Press Enter or Esc to dismiss                                            │  │"
"│ └─────────────────────────────────────────────────────────────────────────┘  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└ NORMAL ──────────────────────────────────────────────────────────────────────┘"
