tests/snapshots/render_snapshots__snapshot_merge_popup.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&model, 80, 24)"
---
"┌Magi───────────────────────────────────────────────────────────────/repo/magi/┐"
"│∨Head:    main [hash] Initial commit                                         │"
"│                                                                              │"
"│∨Recent commits                                                               │"
"│ [hash] main Initial commit                                                  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"┌Merge─────────────────────────────────────────────────────────────────────────┐"
"│Arguments                                                                     │"
"│ -f Fast-forward only (--ff-only)                                             │"
"│ -n No fast-forward (--no-ff)                                                 │"
"│                                                                              │"
"│Actions                                                                       │"
"│ m Merge                                                                      │"
"│ e Merge and edit message                                                     │"
"│ n Merge but don't commit                                                     │"
"│ a Absorb                                                                     │"
"│ p Preview merge                                                              │"
"│ s Squash merge                                                               │"
"│ d Dissolve                                                                   │"
"└──────────────────────────────────────────────────────────────────────────────┘"
